@@ -88,14 +88,6 @@ import org.elasticsearch.xpack.application.connector.action.UpdateConnectorNativ
 import org.elasticsearch.xpack.application.connector.action.UpdateConnectorPipelineAction;
 import org.elasticsearch.xpack.application.connector.action.UpdateConnectorSchedulingAction;
 import org.elasticsearch.xpack.application.connector.action.UpdateConnectorServiceTypeAction;
-import org.elasticsearch.xpack.application.connector.secrets.ConnectorSecretsFeature;
-import org.elasticsearch.xpack.application.connector.secrets.ConnectorSecretsIndexService;
-import org.elasticsearch.xpack.application.connector.secrets.action.GetConnectorSecretAction;
-import org.elasticsearch.xpack.application.connector.secrets.action.PostConnectorSecretAction;
-import org.elasticsearch.xpack.application.connector.secrets.action.RestGetConnectorSecretAction;
-import org.elasticsearch.xpack.application.connector.secrets.action.RestPostConnectorSecretAction;
-import org.elasticsearch.xpack.application.connector.secrets.action.TransportGetConnectorSecretAction;
-import org.elasticsearch.xpack.application.connector.secrets.action.TransportPostConnectorSecretAction;
 import org.elasticsearch.xpack.application.connector.syncjob.action.CancelConnectorSyncJobAction;
 import org.elasticsearch.xpack.application.connector.syncjob.action.CheckInConnectorSyncJobAction;
 import org.elasticsearch.xpack.application.connector.syncjob.action.DeleteConnectorSyncJobAction;
@@ -268,15 +260,6 @@ public class EnterpriseSearch extends Plugin implements ActionPlugin, SystemInde
             );
         }
 
-        if (ConnectorSecretsFeature.isEnabled()) {
-            actionHandlers.addAll(
-                List.of(
-                    new ActionHandler<>(GetConnectorSecretAction.INSTANCE, TransportGetConnectorSecretAction.class),
-                    new ActionHandler<>(PostConnectorSecretAction.INSTANCE, TransportPostConnectorSecretAction.class)
-                )
-            );
-        }
-
         return Collections.unmodifiableList(actionHandlers);
     }
 
@@ -354,10 +337,6 @@ public class EnterpriseSearch extends Plugin implements ActionPlugin, SystemInde
             );
         }
 
-        if (ConnectorSecretsFeature.isEnabled()) {
-            restHandlers.addAll(List.of(new RestGetConnectorSecretAction(), new RestPostConnectorSecretAction()));
-        }
-
         return Collections.unmodifiableList(restHandlers);
     }
 
@@ -392,15 +371,7 @@ public class EnterpriseSearch extends Plugin implements ActionPlugin, SystemInde
 
     @Override
     public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
-        Collection<SystemIndexDescriptor> systemIndices = new ArrayList<>(
-            List.of(SearchApplicationIndexService.getSystemIndexDescriptor(), QueryRulesIndexService.getSystemIndexDescriptor())
-        );
-
-        if (ConnectorSecretsFeature.isEnabled()) {
-            systemIndices.add(ConnectorSecretsIndexService.getSystemIndexDescriptor());
-        }
-
-        return systemIndices;
+        return Arrays.asList(SearchApplicationIndexService.getSystemIndexDescriptor(), QueryRulesIndexService.getSystemIndexDescriptor());
     }
 
     @Override
